🚧 Worked on the mobile design. x1

--- a/index.html
+++ b/index.html
@@ -40,25 +40,56 @@
     <!-- Heading (Visually Hidden) -->
     <h1 class="visually-hidden">Single Price Grid Component</h1>
 
-    <!-- Main (Single Price Grid Component) -->
-    <main class="single-price-grid-component">
-      <!-- Join Our Community Section -->
-      <section class="join-our-community-section single-price-grid-item">
-        <!-- Heading -->
-        <h2 class="heading">Join our community</h2>
-      </section>
+    <!-- Main -->
+    <main>
+      <!-- Single Price Grid Component -->
+      <div class="single-price-grid-component">
+        <!-- Join Our Community Section -->
+        <section class="join-our-community-section single-price-grid-item">
+          <!-- Heading -->
+          <h2 class="heading">Join our community</h2>
 
-      <!-- Monthly Subscription Section -->
-      <section class="monthly-subscription-section single-price-grid-item">
-        <!-- Heading -->
-        <h2 class="heading">Monthly Subscription</h2>
-      </section>
+          <!-- Guarantee Note -->
+          <p class="guarantee-note">30-day, hassle-free money back guarantee</p>
 
-      <!-- Why Us Section -->
-      <section class="why-us-section single-price-grid-item">
-        <!-- Heading -->
-        <h2 class="heading">Why Us</h2>
-      </section>
+          <!-- Description -->
+          <p class="description">
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </p>
+        </section>
+
+        <!-- Monthly Subscription Section -->
+        <section class="monthly-subscription-section single-price-grid-item">
+          <!-- Heading -->
+          <h2 class="heading">Monthly Subscription</h2>
+
+          <!-- Price Per Month Tag -->
+          <p class="price-per-month-tag">&dollar;29 <span>per month</span></p>
+
+          <!-- Price Per Day Tag -->
+          <p class="price-per-day-tag">
+            Full access for less than &dollar;1 a day
+          </p>
+
+          <!-- Sign Up Button -->
+          <button class="sign-up-button">Sign Up</button>
+        </section>
+
+        <!-- Why Us Section -->
+        <section class="why-us-section single-price-grid-item">
+          <!-- Heading -->
+          <h2 class="heading">Why Us</h2>
+
+          <!-- Description -->
+          <p class="description">
+            Tutorials by industry experts Peer &amp; expert code review Coding
+            exercises Access to our GitHub repos Community forum Flashcard decks
+            New videos every week
+          </p>
+        </section>
+      </div>
     </main>
   </body>
 </html>
