🚧 Worked on the mobile design. x3

--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
           <!-- Heading -->
           <h2 class="heading">Why Us</h2>
 
-          <!-- Description -->
-          <p class="description">
-            Tutorials by industry experts Peer &amp; expert code review Coding
-            exercises Access to our GitHub repos Community forum Flashcard decks
-            New videos every week
-          </p>
+          <!-- Feature List -->
+          <ul class="feature-list">
+            <li class="feature-list-item">Tutorials by industry experts</li>
+            <li class="feature-list-item">Peer &amp; expert code review</li>
+            <li class="feature-list-item">Coding exercises</li>
+            <li class="feature-list-item">Access to our GitHub repos</li>
+            <li class="feature-list-item">Community forum</li>
+            <li class="feature-list-item">Flashcard decks</li>
+            <li class="feature-list-item">New videos every week</li>
+          </ul>
         </section>
       </div>
     </main>
