--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </p>
 
           <!-- Sign Up Button -->
-          <button class="sign-up-button">Sign Up</button>
+          <button class="sign-up-button" aria-label="Sign Up">Sign Up</button>
         </section>
 
         <!-- Why Us Section -->
